# random_assignment_student

./: .gitignore  CMakeLists.txt  Makefile  README.md  activities.txt  main.cpp  simple_test.cpp  students.txt
src/: main.cpp
src/application/services/: ActivityAssignmentService.cpp  ActivityAssignmentService.h
src/application/strategies/: IRandomSelectionStrategy.cpp  IRandomSelectionStrategy.h
src/domain/entities/: Activity.cpp  Activity.h  SimpleStudent.h  Student.cpp  Student.h
src/domain/repositories/: IActivityRepository.h  IStudentRepository.h
src/infrastructure/repositories/: FileActivityRepository.cpp  FileActivityRepository.h  FileStudentRepository.cpp  FileStudentRepository.h
src/infrastructure/utils/: Concepts.h  Results.h
src/presentation/controllers/: ActivityAssignmentController.cpp  ActivityAssignmentController.h
